--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1 {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 20px;
-    background-image: url("image/background.jpeg");
+    background-image: url("./image/background.jpeg");
     /* Replace with the path to yourimage */
     background-size: cover;
     background-position: center;
